tests/snapshots/sfc/ts/patches__v_if_with_v_model_on_component.snap
---
source: crates/vize_atelier_sfc/src/snapshot_tests.rs
expression: ts_output.as_str()
---
import { defineComponent as _defineComponent } from 'vue'
import { openBlock as _openBlock, createBlock as _createBlock, createCommentVNode as _createCommentVNode } from "vue"

import { ref } from 'vue'
import MyInput from './MyInput.vue'


export default /*@__PURE__*/_defineComponent({
  __name: 'test',
  setup(__props) {

const visible = ref(true)
const value = ref('')

return (_ctx: any,_cache: any) => {
  return (visible.value)
    ? (_openBlock(), _createBlock(MyInput, {
      key: 0,
      modelValue: value.value,
      "onUpdate:modelValue": _cache[0] || (_cache[0] = ($event: any) => ((value).value = $event))
    }, null, 8 /* PROPS */, ["modelValue"]))
    : _createCommentVNode("v-if", true)
}
}

})
