tests/snapshots/sfc/ts/patches__v_slot_with_hyphenated_name.snap
---
source: crates/vize_atelier_sfc/src/snapshot_tests.rs
expression: ts_output.as_str()
---
import { defineComponent as _defineComponent } from 'vue'
import { toDisplayString as _toDisplayString, createElementVNode as _createElementVNode, openBlock as _openBlock, createBlock as _createBlock, withCtx as _withCtx } from "vue"

import DataTable from './DataTable.vue'


export default /*@__PURE__*/_defineComponent({
  __name: 'test',
  setup(__props) {


return (_ctx: any,_cache: any) => {
  return (_openBlock(), _createBlock(DataTable, null, {
    "item-header": _withCtx(({ item }) => [
      _createElementVNode("span", null, _toDisplayString(item.title), 1 /* TEXT */)
    ]),
    _: 1 /* STABLE */
  }))
}
}

})
