tests/snapshots/sfc/ts/patches__v_slot_with_multiple_hyphenated_names.snap
---
source: crates/vize_atelier_sfc/src/snapshot_tests.rs
expression: ts_output.as_str()
---
import { defineComponent as _defineComponent } from 'vue'
import { openBlock as _openBlock, createBlock as _createBlock, createTextVNode as _createTextVNode, withCtx as _withCtx } from "vue"

import Card from './Card.vue'


export default /*@__PURE__*/_defineComponent({
  __name: 'test',
  setup(__props) {


return (_ctx: any,_cache: any) => {
  return (_openBlock(), _createBlock(Card, null, {
    "card-header": _withCtx(() => [
      _createTextVNode("Header")
    ]),
    "card-body": _withCtx(() => [
      _createTextVNode("Body")
    ]),
    "card-footer": _withCtx(() => [
      _createTextVNode("Footer")
    ]),
    _: 1 /* STABLE */
  }))
}
}

})
